--- a/templates/partials/landingpage/faq-section.html
+++ b/templates/partials/landingpage/faq-section.html
@@ -50,7 +50,7 @@
       <p
         class="font-poppins text-slate-500 text-lg leading-relaxed max-w-xl mx-auto"
       >
-        Masih bingung? Tenang, Mantri Duit siap menjawab keraguan Anda seputar
+        Masih bingung? Tenang, MAGATRA siap menjawab keraguan Anda seputar
         aplikasi pencatatan keuangan ini.
       </p>
     </div>
@@ -144,7 +144,7 @@
           class="collapse-content text-slate-500 font-poppins leading-relaxed text-sm sm:text-base"
         >
           <p class="pb-4">
-            Mantri Duit adalah <strong>PWA (Progressive Web App)</strong>.
+            MAGATRA adalah <strong>PWA (Progressive Web App)</strong>.
             Artinya, Anda tetap bisa membuka aplikasi dan mencatat transaksi
             meskipun sedang offline (tanpa sinyal).
           </p>
