--- a/templates/partials/landingpage/navbar.html
+++ b/templates/partials/landingpage/navbar.html
@@ -64,7 +64,7 @@
           <span
             class="font-montserrat font-bold text-slate-800 text-lg tracking-tight"
           >
-            Mantri <span class="text-teal-600">Duit</span>
+            MAGA<span class="text-teal-600">TRA</span>
           </span>
         </a>
       </div>
