--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{% block title %}Mantri Duit{% endblock %}</title>
+    <title>{% block title %}MAGATRA{% endblock %}</title>
     <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}" />
 
     <!-- Tailwind CSS v4 + DaisyUI -->
