--- a/templates/partials/landingpage/footer.html
+++ b/templates/partials/landingpage/footer.html
@@ -49,7 +49,7 @@
           <span
             class="font-montserrat font-bold text-2xl text-white tracking-tight"
           >
-            Mantri <span class="text-primary-teal">Duit</span>
+            MAGA<span class="text-primary-teal">TRA</span>
           </span>
         </a>
 
@@ -288,7 +288,7 @@
       >
         <p class="text-center md:text-left">
           &copy; 2025
-          <span class="text-primary-teal font-bold">Tim Mantri Duit</span>. All
+          <span class="text-primary-teal font-bold">MAGATRA</span>. All
           rights reserved.
         </p>
         <div class="flex gap-6">
