--- a/templates/partials/landingpage/how-to-use.html
+++ b/templates/partials/landingpage/how-to-use.html
@@ -261,12 +261,12 @@
           <h3
             class="font-montserrat font-bold text-2xl sm:text-3xl text-white mb-6"
           >
-            Lihat Mantri Duit Beraksi!
+            Lihat MAGATRA Beraksi!
           </h3>
 
           <p class="font-poppins text-slate-400 mb-10 max-w-2xl mx-auto">
             Tonton video 2 menit bagaimana pedagang es teh keliling berhasil
-            menggandakan modalnya dalam 6 bulan menggunakan Mantri Duit.
+            menggandakan modalnya dalam 6 bulan menggunakan MAGATRA.
           </p>
 
           <div
